...

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TopNavigationBar(
    navigationActions: NavigationActions,
    actions: @Composable() (RowScope.() -> Unit) = {},
    screenTitle: String?
) {
  TopAppBar(
      modifier =
          Modifier.fillMaxWidth()
              .background(
                  Brush.horizontalGradient(
...
                modifier = Modifier.testTag("screenTitle"))
          }
        }
      },
      navigationIcon = {
        IconButton(
            onClick = { navigationActions.goBack() }, modifier = Modifier.testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = null,
                  tint = MaterialTheme.colorScheme.onTertiary)
            }
      },
...
